<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.luvx</groupId>
    <artifactId>coding-root</artifactId>
    <version>0.1</version>
    <packaging>pom</packaging>

    <name>${project.artifactId}</name>

    <properties>
        <app.version>0.1</app.version>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <collections4.version>4.4</collections4.version>
        <guava.version>32.1.3-jre</guava.version>
        <jackson.version>2.15.3</jackson.version>
        <junit.version>5.10.1</junit.version>
        <lang3.version>3.14.0</lang3.version>
        <kotlin.version>1.9.22</kotlin.version>
        <logback.version>1.2.12</logback.version>
        <lombok.version>1.18.30</lombok.version>
        <maven.plugin.version>3.11.0</maven.plugin.version>
        <slf4j.version>1.7.36</slf4j.version>
        <vavr.version>0.10.4</vavr.version>
        <!-- <vavr.version>1.0.0-alpha-4</vavr.version> -->

        <fastjson.version>2.0.45</fastjson.version>
        <jsoup.version>1.17.2</jsoup.version>
    </properties>

    <modules>
        <module>coding-parent-java</module>
        <module>coding-parent-boot-java</module>
        <module>logging-parent</module>
        <module>logging-parent-spring</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>${vavr.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${collections4.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.4</version>
        </dependency>

        <dependency>
            <groupId>com.github.phantomthief</groupId>
            <artifactId>more-lambdas-jdk9</artifactId>
            <version>0.1.55</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.carrotsearch</groupId>
            <artifactId>hppc</artifactId>
            <version>0.9.1</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.luvx.coding</groupId>
                <artifactId>logging-parent</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.boot</groupId>
                <artifactId>logging-parent-spring</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.coding</groupId>
                <artifactId>coding-common</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.coding</groupId>
                <artifactId>coding-infra</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.boot</groupId>
                <artifactId>boot-common</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.boot</groupId>
                <artifactId>boot-aop</artifactId>
                <version>${app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.luvx.boot</groupId>
                <artifactId>boot-web</artifactId>
                <version>${app.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/central</url>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <!--        <directory>${user.home}/.m2/target/${project.parent.artifactId}/${project.artifactId}</directory>-->
        <outputDirectory>
            ${user.home}/.m2/target/${project.parent.artifactId}/${project.artifactId}/classes
        </outputDirectory>
        <testOutputDirectory>
            ${user.home}/.m2/target/${project.parent.artifactId}/${project.artifactId}/test-classes
        </testOutputDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <!-- 生成源文件jar包文件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 打字节码包插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Contains-Sources>java,class</Contains-Sources>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/java</source>
                                <source>src/main/kotlin</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
